--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,10 +30,15 @@ tauri-plugin-dialog = "2.4.0"
 image = "0.25"
 thiserror = "2.0"
 async-trait = "0.1"
+# NOTE: ffmpeg-next 6.0 is incompatible with FFmpeg 8.0+ due to removed avfft.h
+# Waiting for ffmpeg-next 7.x or alternative solution
+# ffmpeg-next = "6.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 screencapturekit = "0.2"
 core-graphics = "0.23"
+cocoa = "0.25"
+objc = "0.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.58", features = [
@@ -43,9 +48,14 @@ windows = { version = "0.58", features = [
     "Win32_Graphics_Gdi",
     "Win32_Foundation",
     "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_System_ProcessStatus",
 ]}
 
 [target.'cfg(target_os = "linux")'.dependencies]
 x11 = { version = "2.21", features = ["xlib", "xrandr"] }
 ashpd = "0.9"
+zbus = "4.0"
+procfs = "0.16"
 
