--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -52,6 +52,7 @@ windows = { version = "0.58", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Diagnostics_ToolHelp",
     "Win32_System_ProcessStatus",
+    "Win32_UI_Input_KeyboardAndMouse",
 ]}
 
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -59,4 +60,5 @@ x11 = { version = "2.21", features = ["xlib", "xrandr"] }
 ashpd = "0.9"
 zbus = "4.0"
 procfs = "0.16"
+evdev = "0.12"
 
