--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,8 @@ image = "0.25"
 thiserror = "2.0"
 async-trait = "0.1"
 hostname = "0.4"
+tesseract = "0.14"
+leptonica-sys = "0.4"
 # NOTE: ffmpeg-next 6.0 is incompatible with FFmpeg 8.0+ due to removed avfft.h
 # Waiting for ffmpeg-next 7.x or alternative solution
 # ffmpeg-next = "6.0"
