feat: implement FFmpeg video encoding pipeline
Problem:
Phase 6 playback system expected MP4 video files, but the recording
system only saved raw PNG frames. This was a critical architectural
mismatch preventing video playback from working.

Solution:
Implemented complete FFmpeg-based video encoding pipeline with:
- ffmpeg-sys-next 8.0 integration for FFmpeg 8.0+ compatibility
- Safe Rust wrapper (ffmpeg_wrapper.rs) around unsafe C bindings
- RGBA8 to YUV420P color space conversion
- H.264 encoding with hardware acceleration (VideoToolbox on macOS)
- Automatic software fallback (libx264) when hardware unavailable
- Updated playback_engine to query video_segments table instead of frames

Files Modified:
- src-tauri/Cargo.toml: Added ffmpeg-sys-next 8.0 dependency
- src-tauri/build.rs: FFmpeg path configuration for macOS
- src-tauri/src/core/ffmpeg_wrapper.rs: NEW - Safe FFmpeg wrapper (447 lines)
- src-tauri/src/core/video_encoder.rs: Implemented encode_frames_sync()
- src-tauri/src/core/playback_engine.rs: Fixed database query
- src-tauri/src/core/mod.rs: Exported ffmpeg_wrapper module
- src-tauri/examples/test_video_encoding.rs: NEW - Test suite (192 lines)
- _docs/devlog/2025-11-12-phase-2.4-video-encoding-implementation.md: NEW - Complete documentation
- CLAUDE.md: Added FFmpeg system requirements

Test Results:
- Software encoding (libx264): Fully functional
- 60 frames encoded to 15 KB MP4 (11,960:1 compression)
- Valid H.264 video playable in all standard players
- Hardware acceleration attempted (partial - VideoToolbox has alignment issues)

Impact:
Closes critical gap between screen recording and playback systems.
The Observer application can now properly encode screen recordings
to MP4 format and play them back in the VideoPlayer component.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,8 +34,9 @@ hostname = "0.4"
 tesseract = "0.14"
 leptonica-sys = "0.4"
 # NOTE: ffmpeg-next 6.0 is incompatible with FFmpeg 8.0+ due to removed avfft.h
-# Waiting for ffmpeg-next 7.x or alternative solution
+# Using ffmpeg-sys-next (low-level bindings) until ffmpeg-next 7.x is available
 # ffmpeg-next = "6.0"
+ffmpeg-sys-next = "8.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 screencapturekit = "0.2"
